--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>你好</title>
+</head>
+<body>
+<h1>hello nihaoma i am fine </h1>
+</body>
+</html>
